Fixed Demo and Repo button's text alignment.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,7 +9,7 @@ html {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #45a049;
 }
 
 i {
@@ -73,7 +73,7 @@ img, button, input {
   height: 8vh;
   text-align: center;
   font-size: 2vh;
-  background-color: #f1f1f1;
+  background-color: #fff;
 }
 
 .project {
@@ -112,7 +112,7 @@ footer {
 
   .buttons > button {
     font-size: 4vw;
-    background-color: #f1f1f1;
+    background-color: #fff;
     padding: 0 .5em 0 .5em;
     margin: 0 .5em 0 .5em;
     height: 8vh;
@@ -165,7 +165,7 @@ footer {
 
   .buttons > button {
     font-size: 4vw;
-    background-color: #f1f1f1;
+    background-color: #fff;
     padding: 0 .5em 0 .5em;
     margin: 0 .5em 0 .5em;
     height: 8vh;
